Solved : endgame info is behind the pieces

--- a/sharedstyle.css
+++ b/sharedstyle.css
@@ -139,6 +139,7 @@ button:hover {
   /* settings to change at end of game */
   visibility: hidden;
   pointer-events: none;
+  z-index: 2;
 }
 
 #info h2 {
